java8.spoofax3/test/statics/java/classes/inheritance/circular.no.spt
module classes/inheritance/circular_no

language metaborg-java

test circular [[

test;



// error: cyclic

[Point]
public class Point extends ColoredPoint{
    int color;
}

[ColoredPoint]
class ColoredPoint extends Point {
    int color;
}

]] analysis fails
   run javacFails to ""
